# systemsession

./: CMakeLists.txt  README.md
data/: kedos.desktop  kedos.session  systemsession.desktop
src/: Main.vala
src/Control/: Control.vala
src/Services/: ProcessWrapper.vala
